--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=8080
+spring.datasource.url=jdbc:mysql://mysqlfirst-do-user-15277850-0.c.db.ondigitalocean.com:25060/testDb
+spring.datasource.username=doadmin
+spring.datasource.password=AVNS_5-UE-eCyVGCRisZ0FB6
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
